--- a/network-settings.json
+++ b/network-settings.json
@@ -11,7 +11,8 @@
         "stp",
         "static-flow-pusher",
         "arp-handler",
-        "flow-manager"
+        "flow-manager",
+        "access_control_app"
     ],
 
     "rest-listener" : {
