--- a/access_control_config.json
+++ b/access_control_config.json
@@ -3,23 +3,26 @@
   "def-rule": {
     "allow-arp": true,
     "hosts": [
-      "00:00:00:00:00:01",
-      "00:00:00:00:00:04"
+      "10.0.0.1",
+      "10.0.0.4"
     ]
   },
 
   "clients": {
     "00:00:00:00:00:01": {
       "hosts": [
-        "00:00:00:00:00:02",
-        "00:00:00:00:00:03",
-        "00:00:00:00:00:05"
+        "10.0.0.2",
+        "10.0.0.3",
+        "10.0.0.5"
       ]
     },
     "00:00:00:00:00:05": {
       "hosts": [
-        "00:00:00:00:00:03"
+        "10.0.0.3"
       ]
+    },
+    "00:00:00:00:00:03": {
+      "hosts": [ ]
     }
   }
 
